; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc32xx.c_lpc32xx_gpo_get_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc32xx.c_lpc32xx_gpo_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.lpc32xx_gpio_chip = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @lpc32xx_gpo_get_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpc32xx_gpo_get_value(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.lpc32xx_gpio_chip*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %7 = call %struct.lpc32xx_gpio_chip* @gpiochip_get_data(%struct.gpio_chip* %6)
  store %struct.lpc32xx_gpio_chip* %7, %struct.lpc32xx_gpio_chip** %5, align 8
  %8 = load %struct.lpc32xx_gpio_chip*, %struct.lpc32xx_gpio_chip** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @__get_gpo_state_p3(%struct.lpc32xx_gpio_chip* %8, i32 %9)
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local %struct.lpc32xx_gpio_chip* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @__get_gpo_state_p3(%struct.lpc32xx_gpio_chip*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
